Правит header в портфолио.

--- a/portfolio.html
+++ b/portfolio.html
@@ -17,8 +17,8 @@
          <nav class="navigation">
           <a class="logo" href="./index.html"><span class="logo-color">Web</span> Studio</a>
           <ul class="list nav">
-            <li class="nav-item"><a href="./index.html" class="nav-link current">Студия</a></li>
-            <li class="nav-item"><a href="./portfolio.html" class="nav-link">Портфолио</a></li>
+            <li class="nav-item"><a href="./index.html" class="nav-link">Студия</a></li>
+            <li class="nav-item"><a href="./portfolio.html" class="nav-link current">Портфолио</a></li>
             <li class="nav-item"><a href="#" class="nav-link">Контакты</a></li>
           </ul>
         </nav>
