--- a/portfolio.html
+++ b/portfolio.html
@@ -48,8 +48,8 @@
     </header>
 
     <main>
+     <section class="container box">
       <h1 hidden>Контент страницы Portfolio</h1>
-    <section class="container box">
       <!-- buttons and all -->
       <h2 hidden>Фильтры Portfolio</h2>
       <ul class="list btn-list">
@@ -64,8 +64,8 @@
         <li class="portfolio-item">
           <a href="">
             <div class="portfolio-card">
-               <img src="./images/techno.jpg" width="370" alt="Технокряк"/>
-            <div class="hover-card">
+              <img src="./images/techno.jpg" width="370" alt="Технокряк"/>
+               <div class="hover-card">
                <p class="hover-text" lang="ru">
                Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
                </p>
@@ -81,7 +81,7 @@
         <li class="portfolio-item">
           <a href="">
             <div class="portfolio-card">
-               <img src="./images/techno.jpg" width="370" alt="Технокряк"/>
+               <img src="./images/basket.jpg" width="370" alt="Технокряк"/>
             <div class="hover-card">
                <p class="hover-text" lang="ru">
                Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
@@ -89,7 +89,7 @@
             </div>
             </div>
             <div class="portfolio-title">
-              <h3 class="title-card" lang="ru">Технокряк</h3>
+              <h3 class="title-card" lang="ru">New Orlean vs Golden Star</h3>
               <p class="text-card" lang="ru">Дизайн</p>
           </div>
           </a>
@@ -98,7 +98,7 @@
         <li class="portfolio-item">
           <a href="">
             <div class="portfolio-card">
-               <img src="./images/techno.jpg" width="370" alt="Технокряк"/>
+               <img src="./images/seafood.jpg" width="370" alt="Технокряк"/>
             <div class="hover-card">
                <p class="hover-text" lang="ru">
                Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
@@ -106,7 +106,7 @@
             </div>
             </div>
             <div class="portfolio-title">
-              <h3 class="title-card" lang="ru">Технокряк</h3>
+              <h3 class="title-card" lang="ru">Ресторан Seafood</h3>
                <p class="text-card" lang="ru">Приложение</p>
            </div>
           </a>
@@ -115,7 +115,7 @@
         <li class="portfolio-item">
           <a href="">
             <div class="portfolio-card">
-               <img src="./images/techno.jpg" width="370" alt="Технокряк"/>
+               <img src="./images/prime.jpg" width="370" alt="Технокряк"/>
             <div class="hover-card">
                <p class="hover-text" lang="ru">
                Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
@@ -123,7 +123,7 @@
             </div>
             </div>
             <div class="portfolio-title">
-              <h3 class="title-card" lang="ru">Технокряк</h3>
+              <h3 class="title-card" lang="ru">Проект Prime</h3>
                <p class="text-card" lang="ru">Маркетинг</p>
             </div>
           </a>
@@ -132,7 +132,7 @@
         <li class="portfolio-item">
           <a href="">
             <div class="portfolio-card">
-               <img src="./images/techno.jpg" width="370" alt="Технокряк"/>
+               <img src="./images/boxes.jpg" width="370" alt="Технокряк"/>
             <div class="hover-card">
                <p class="hover-text" lang="ru">
                Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
@@ -140,7 +140,7 @@
             </div>
             </div>
             <div class="portfolio-title">
-              <h3 class="title-card" lang="ru">Технокряк</h3>
+              <h3 class="title-card" lang="ru">Проект Boxes</h3>
             <p class="text-card" lang="ru">Приложение</p>
             </div>
           </a>
@@ -149,7 +149,7 @@
         <li class="portfolio-item">
           <a href="">
             <div class="portfolio-card">
-               <img src="./images/techno.jpg" width="370" alt="Технокряк"/>
+               <img src="./images/borders.jpg" width="370" alt="Технокряк"/>
             <div class="hover-card">
                <p class="hover-text" lang="ru">
                Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
@@ -157,7 +157,7 @@
             </div>
             </div>
             <div class="portfolio-title">
-              <h3 class="title-card" lang="ru">Технокряк</h3>
+              <h3 class="title-card" lang="ru">Inspiration has no Borders</h3>
                <p class="text-card" lang="ru">Веб-сайт</p>
             </div>
           </a>
@@ -166,7 +166,7 @@
         <li class="portfolio-item">
           <a href="">
             <div class="portfolio-card">
-               <img src="./images/techno.jpg" width="370" alt="Технокряк"/>
+               <img src="./images/limited_edition.jpg" width="370" alt="Технокряк"/>
             <div class="hover-card">
                <p class="hover-text" lang="ru">
                Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
@@ -174,7 +174,7 @@
             </div>
             </div>
             <div class="portfolio-title">
-              <h3 class="title-card" lang="ru">Технокряк</h3>
+              <h3 class="title-card" lang="ru">Издание Limited Edition</h3>
               <p class="text-card" lang="ru">Дизайн</p>
             </div>
           </a>
@@ -183,7 +183,7 @@
         <li class="portfolio-item">
           <a href="">
             <div class="portfolio-card">
-               <img src="./images/techno.jpg" width="370" alt="Технокряк"/>
+               <img src="./images/lab.jpg" width="370" alt="Технокряк"/>
             <div class="hover-card">
                <p class="hover-text" lang="ru">
                Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
