Правит фокус в портфолио и подключает портфолио в main.

--- a/portfolio.html
+++ b/portfolio.html
@@ -62,7 +62,7 @@
      
       <ul class="list portfolio">
         <li class="portfolio-item">
-          <a href="">
+          <a class="filtre" href="">
             <div class="portfolio-card">
               <img src="./images/techno.jpg" width="370" alt="Технокряк"/>
                <div class="hover-card">
@@ -79,7 +79,7 @@
         </li>
 
         <li class="portfolio-item">
-          <a href="">
+          <a class="filtre" href="">
             <div class="portfolio-card">
                <img src="./images/basket.jpg" width="370" alt="Технокряк"/>
             <div class="hover-card">
@@ -96,7 +96,7 @@
         </li>
       
         <li class="portfolio-item">
-          <a href="">
+          <a class="filtre" href="">
             <div class="portfolio-card">
                <img src="./images/seafood.jpg" width="370" alt="Технокряк"/>
             <div class="hover-card">
@@ -113,7 +113,7 @@
         </li>
 
         <li class="portfolio-item">
-          <a href="">
+          <a class="filtre" href="">
             <div class="portfolio-card">
                <img src="./images/prime.jpg" width="370" alt="Технокряк"/>
             <div class="hover-card">
@@ -130,7 +130,7 @@
         </li>
 
         <li class="portfolio-item">
-          <a href="">
+          <a class="filtre" href="">
             <div class="portfolio-card">
                <img src="./images/boxes.jpg" width="370" alt="Технокряк"/>
             <div class="hover-card">
@@ -147,7 +147,7 @@
         </li>
 
         <li class="portfolio-item">
-          <a href="">
+          <a class="filtre" href="">
             <div class="portfolio-card">
                <img src="./images/borders.jpg" width="370" alt="Технокряк"/>
             <div class="hover-card">
@@ -164,7 +164,7 @@
         </li>
 
         <li class="portfolio-item">
-          <a href="">
+          <a class="filtre" href="">
             <div class="portfolio-card">
                <img src="./images/limited_edition.jpg" width="370" alt="Технокряк"/>
             <div class="hover-card">
@@ -181,7 +181,7 @@
         </li>
 
         <li class="portfolio-item">
-          <a href="">
+          <a class="filtre" href="">
             <div class="portfolio-card">
                <img src="./images/lab.jpg" width="370" alt="Технокряк"/>
             <div class="hover-card">
@@ -198,7 +198,7 @@
         </li>
 
         <li class="portfolio-item">
-          <a href="">
+          <a class="filtre" href="">
             <div class="portfolio-card">
                <img src="./images/techno.jpg" width="370" alt="Технокряк"/>
             <div class="hover-card">
